--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/client/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Server Vite + React + TS</title>
+    <title>!Server Vite + React + TS</title>
 
     <!-- placeholder -->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/client/src/main.tsx"></script>
+    <script type="module" src="client/src/main.tsx"></script>
+    <!-- <h1>Server Vite + React + TS</h1> -->
   </body>
 </html>
